# PolyCode-Backend

./: .gitignore  .gitmodules  02) Variables.md  05) Input Output.md  07) Error Handling.md  09) File and Directory Operations.md  INDEX.md  Python.txt  README.md  api-docs.html  package-lock.json  package.json  qbits.md  requirements.txt  server.js
02-basics/ResultAsBool/: Program.qs
Examples/: README.md
Examples/Advanced/: json like parser.bat
Examples/Beginner/: file exists check.bat
Reference/: README.md
Reference/Examples/: Control Flow Examples.bat
Reference/Syntax Guide/: Batch Syntax Examples.md
advanced/: Audio Processing.md  Audio Processing.rs  Cross-Platform Development.rs  Foreign Function Interface (FFI).md  Memory Management and Performance.md
advanced/metaprogramming/: Metaprogramming Advanced.md  Metaprogramming Advanced.rs  Procedural Macros.md  Procedural Macros.rs
advanced/performance/: Memory Management and Performance.rs  Performance Optimization.md
advanced/specialized-topics/: Blockchain.md  Blockchain.rs  Concurrency Patterns.md  Cross-Platform Development.md
advanced/technologies/: Audio Processing.md
data/: CONCLUSION.md  PROJECTS_SUMMARY.md  README.md  README_code.md  basics.md  qubits.md
data/01) Pointers/: AddressOperator.md  DereferenceOperator.md  PracticalExamples.md  WhatIsPointer.md
data/01-hello/: README.md  formatted.go  input.go  multiple.go  variables.go
data/01-introduction/: 01-what-is-quantum.md  02-qsharp-ecosystem.md  03-environment-setup.md  04-hello-quantum.md  README.md
data/02) DynamicMemoryAllocation/: NewDeleteOperators.md  StackVsHeap.md
data/02-basics/: 01-types-and-variables.md  02-operations-and-functions.md  03-control-flow.md  04-arrays-and-tuples.md  05-user-defined-types.md  06-functors.md  README.md
data/02-variables/: constants.go  pointers.go  scope.go  short-declaration.go  types.go
data/03) SmartPointers/: PracticalExamples.md  ProblemWithRawPointers.md  SharedPtr.md  WhatIsSmartPointer.md
data/03-control-flow/: conditions.go  defer.go  loops.go  panic-recover.go  switch.go
data/03-quantum-fundamentals/: 01-qubit-math.md  02-single-qubit-gates.md  03-multi-qubit-systems.md  04-two-qubit-gates.md  README.md
data/04) 1D_Arrays/: ArrayConcepts.md  ArrayOperations.md  ArraysAndFunctions.md  CommonArrayPitfalls.md  Overview.md
data/04-functions/: README.md  closures.go  higher-order.go  multiple-returns.go  recursion.go
data/04-intermediate/: 02-quantum-teleportation.md  04-quantum-oracles.md  README.md
data/05-advanced/: 01-error-correction-basics.md  05-resource-estimation.md  README.md
data/05-collections/: README.md  arrays.go  maps.go  slices-advanced.go  structs-collections.go
data/06) CharArrays/: Overview.md
data/06-algorithms/: 01-grovers-algorithm.md  03-shors-algorithm.md  (+2 more)
data/projects/Banking_Management_System/: CMakeLists.txt  README.md
data/projects/Banking_Management_System/include/: account.h  bank.h
data/projects/Banking_Management_System/src/: main.cpp
learning-guide/: README.md
routes/: documents.js
specialized/: IoT.md
(+1174 files in other folders)
